# bonk

./: .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  nginx.conf
.claude/: settings.local.json
.devcontainer/: devcontainer.json
bonk/: CMakeLists.txt  package-lock.json  package.json  server.js
bonk/src/: addon.cpp  tet.cpp  tet.hpp
scripts/: npy-to-audio.py  render-result.py  spring-freq.py
src/: connection.cpp  connection.h  event_stream.cpp  event_stream.h  main.cpp  sim.cpp  sim.h  tet.cpp
viz/: index.html  package-lock.json  package.json  vite.config.ts
viz/public/: bonk-processor.js
viz/src/: index.css  main.tsx  styles.css
viz/src/components/: AxisIndicator.tsx  BottomPanel.tsx  ControlPanel.tsx  Model.tsx  TopBar.tsx
viz/src/context/: uuid.tsx
viz/src/hooks/: useStream.ts  useUuid.ts
